package com.examSystem.abstractfactory;

public interface QuestionEvaluator {
    
    double evaluate(Question question, String submittedAnswer);
    
}
