package com.examSystem.source;

public interface QuestionSource {
    
    String getQuestionData(String type);
}
