' Generated by UML Generator
' Encoded: pLXBRziu4BxxLn3OYxE9Y-xLw1frym0ARBP9dLlH0oqn3X5PSaagQVhGRoyfMTICE5Baj35oIipv-CsJmn7VQiELoTV9ID_ATCCLNxCeuLhFZL5ocHlnFihIXVmcsElHZOm5YwIA4Z4QbIXsgZL_EBtZISvDfjZt4ME7elefnbzoeOtCqYcxtFvtn7I-N4jZH3nFzRrGKxQmUjBLmPJ5MRwqn3yHzHcFBEz3IJpHMQuYqR0jojzECd5wuOOnZJrmk4W9Qrqj61yqe4RwKQInK491QRtMeBpZ4EONMwxKyigNEZPNugkfWu0zyGPIqDAHbJ2NGEQCs19XpRNXLNfK-Oj8Zjr-bycusNn-VFaygRN4koIsWR-ij5gxXYKrsxXLFMN_IMtULEip9uWofKHaSC2Wtxr5SCH8uYD6qZvICfNmGqNerbksEkanvANApLhyr6AxKDdATf-rvNkUeWCATYc-SDlBAa9WtmuTXjZrMtq6yErU038rGbtpI33aGT6hDzo4owRuxR89DS2wANfJNGnATJ4qrQ4fACh5y6DsfN9nnXCjdkUGUVfTZbXxqyiwODwwOSUhlwK7P1sD_UaT_D4UxKruQgS-_ShNnrbwBLUvuar0Z3I9W0x7M_6KsV9r2nkxsyeMrZdX5rEnigWxSSwLdK1NKxRCiaJm5CPuSPDVNpjo8EEvoHPbNQBbY2THdhWCpfCaknSnaheSJ0BxntLWhvmBGKHFFAmssgrU06U0HEh_iKDErbXWvPVOgK0-zuu5ekEsSn3Xy_CkbqcyJQijH-Veb4ZQlomLzumEHbMikeu8IgrLkTMmnVZur0a_bwdzSD1bJ08qYbjG4HWkKcwx2n7G04C4DS3Wm08nTy5iOjkIBjs_RYq8bGivNsgZRDkglfhOVFlJOSi4_DMP02VyWYuMAUf9hdNXp7nA8F-ua_g83IKkAz_mMr4IraVTMhQngVQDHe_9szexMSHIRnB-SCBrpJBZAWPCHS0UHis9uOLHT-W_vMIrkpaXPpBbYRV-qF_yOn7jZ4TemZxzFfUnpTswyHmixD5te7MVtb-uYfEHxHNoMwKGhkpHVwXsh-ddihgh3xzhOycYdsnjbyPShNJTtJzz3inznzDRF8dX2SZ9fvPyywQUNk2dOzcx54_ZR3rb7yk_lfk5pEFsZ7F23H-RXmsyVjeJpPdjC8goCCforwpAcyNUT_zunOCLX8Ctu2y6qxIUoLwz-Z4ZHiu0rO16w3KCxTykOiJVaqbxscunT7FFmg6v4z4ote_8oC8HVeL2Cgm2OC1sz0xL4RiM1k_kZHkG4r53kxjO2NSwvCZWZcZ1HnGwLXW1jfAFA1qHwy3IRBqH971494csnxGHpZ-28ntiY3JrQa57d4O2gl0HWXIJdlS9lGLzeCRdu7a0AI8-_ZkAWqHIJBs54Q28iY2O-lKGiUb54Kvrb4FuPKmN0uK3DFNtbtCsdFfhgTjIVsMWhuPIPtbne-N9P4Qm8KW6ekjl1J1aEPKX1OKODHFoP6BDWMg0Z2OCHjkI0Yo4Y854tZmuo8O6GYdDJ4oWWP44PZ2PDnJDdA6bI4opKyDYO2i56axdhIKcFNG2jaUMchSet5jxFF9ryWi
' URL: http://www.plantuml.com/plantuml/uml/pLXBRziu4BxxLn3OYxE9Y-xLw1frym0ARBP9dLlH0oqn3X5PSaagQVhGRoyfMTICE5Baj35oIipv-CsJmn7VQiELoTV9ID_ATCCLNxCeuLhFZL5ocHlnFihIXVmcsElHZOm5YwIA4Z4QbIXsgZL_EBtZISvDfjZt4ME7elefnbzoeOtCqYcxtFvtn7I-N4jZH3nFzRrGKxQmUjBLmPJ5MRwqn3yHzHcFBEz3IJpHMQuYqR0jojzECd5wuOOnZJrmk4W9Qrqj61yqe4RwKQInK491QRtMeBpZ4EONMwxKyigNEZPNugkfWu0zyGPIqDAHbJ2NGEQCs19XpRNXLNfK-Oj8Zjr-bycusNn-VFaygRN4koIsWR-ij5gxXYKrsxXLFMN_IMtULEip9uWofKHaSC2Wtxr5SCH8uYD6qZvICfNmGqNerbksEkanvANApLhyr6AxKDdATf-rvNkUeWCATYc-SDlBAa9WtmuTXjZrMtq6yErU038rGbtpI33aGT6hDzo4owRuxR89DS2wANfJNGnATJ4qrQ4fACh5y6DsfN9nnXCjdkUGUVfTZbXxqyiwODwwOSUhlwK7P1sD_UaT_D4UxKruQgS-_ShNnrbwBLUvuar0Z3I9W0x7M_6KsV9r2nkxsyeMrZdX5rEnigWxSSwLdK1NKxRCiaJm5CPuSPDVNpjo8EEvoHPbNQBbY2THdhWCpfCaknSnaheSJ0BxntLWhvmBGKHFFAmssgrU06U0HEh_iKDErbXWvPVOgK0-zuu5ekEsSn3Xy_CkbqcyJQijH-Veb4ZQlomLzumEHbMikeu8IgrLkTMmnVZur0a_bwdzSD1bJ08qYbjG4HWkKcwx2n7G04C4DS3Wm08nTy5iOjkIBjs_RYq8bGivNsgZRDkglfhOVFlJOSi4_DMP02VyWYuMAUf9hdNXp7nA8F-ua_g83IKkAz_mMr4IraVTMhQngVQDHe_9szexMSHIRnB-SCBrpJBZAWPCHS0UHis9uOLHT-W_vMIrkpaXPpBbYRV-qF_yOn7jZ4TemZxzFfUnpTswyHmixD5te7MVtb-uYfEHxHNoMwKGhkpHVwXsh-ddihgh3xzhOycYdsnjbyPShNJTtJzz3inznzDRF8dX2SZ9fvPyywQUNk2dOzcx54_ZR3rb7yk_lfk5pEFsZ7F23H-RXmsyVjeJpPdjC8goCCforwpAcyNUT_zunOCLX8Ctu2y6qxIUoLwz-Z4ZHiu0rO16w3KCxTykOiJVaqbxscunT7FFmg6v4z4ote_8oC8HVeL2Cgm2OC1sz0xL4RiM1k_kZHkG4r53kxjO2NSwvCZWZcZ1HnGwLXW1jfAFA1qHwy3IRBqH971494csnxGHpZ-28ntiY3JrQa57d4O2gl0HWXIJdlS9lGLzeCRdu7a0AI8-_ZkAWqHIJBs54Q28iY2O-lKGiUb54Kvrb4FuPKmN0uK3DFNtbtCsdFfhgTjIVsMWhuPIPtbne-N9P4Qm8KW6ekjl1J1aEPKX1OKODHFoP6BDWMg0Z2OCHjkI0Yo4Y854tZmuo8O6GYdDJ4oWWP44PZ2PDnJDdA6bI4opKyDYO2i56axdhIKcFNG2jaUMchSet5jxFF9ryWi
' Generated on: 2026-06-27T21:06:04.575324800

@startuml
skinparam classAttributeIconSize 0
hide circle

class EssayEvaluator {
  +evaluate(question: Question, submittedAnswer: String): double
}

class EssayFactory {
  -source: QuestionSource
  --
  +EssayFactory(source: QuestionSource)
  +createQuestion(): Question
  +createRenderer(): QuestionRenderer
  +createEvaluator(): QuestionEvaluator
}

class EssayQuestion {
  -questionText: String
  --
  +EssayQuestion(questionText: String)
  +getQuestionText(): String
}

class EssayRenderer {
  +render(question: Question): void
}

class MCQEvaluator {
  +evaluate(question: Question, submittedAnswer: String): double
}

class MCQFactory {
  -source: QuestionSource
  --
  +MCQFactory(source: QuestionSource)
  +createQuestion(): Question
  +createRenderer(): QuestionRenderer
  +createEvaluator(): QuestionEvaluator
}

class MCQQuestion {
  -questionText: String
  -options: List<String>
  -correctAnswer: String
  --
  +MCQQuestion(questionText: String, options: List<String>, correctAnswer: String)
  +getQuestionText(): String
  +getOptions(): List<String>
  +getCorrectAnswer(): String
}

class MCQRenderer {
  +render(question: Question): void
}

class ProgrammingEvaluator {
  +evaluate(question: Question, submittedAnswer: String): double
}

class ProgrammingFactory {
  -source: QuestionSource
  --
  +ProgrammingFactory(source: QuestionSource)
  +createQuestion(): Question
  +createRenderer(): QuestionRenderer
  +createEvaluator(): QuestionEvaluator
}

class ProgrammingQuestion {
  -questionText: String
  --
  +ProgrammingQuestion(questionText: String)
  +getQuestionText(): String
}

class ProgrammingRenderer {
  +render(question: Question): void
}

interface Question {
  ~getQuestionText(): String
}

interface QuestionEvaluator {
  ~evaluate(question: Question, submittedAnswer: String): double
}

interface QuestionFactory {
  ~createQuestion(): Question
  ~createRenderer(): QuestionRenderer
  ~createEvaluator(): QuestionEvaluator
}

interface QuestionRenderer {
  ~render(question: Question): void
}

class TrueFalseEvaluator {
  +evaluate(question: Question, submittedAnswer: String): double
}

class TrueFalseFactory {
  -source: QuestionSource
  --
  +TrueFalseFactory(source: QuestionSource)
  +createQuestion(): Question
  +createRenderer(): QuestionRenderer
  +createEvaluator(): QuestionEvaluator
}

class TrueFalseQuestion {
  -questionText: String
  -correctAnswer: String
  --
  +TrueFalseQuestion(questionText: String, correctAnswer: String)
  +getQuestionText(): String
  +getCorrectAnswer(): String
}

class TrueFalseRenderer {
  +render(question: Question): void
}

class ExamConfiguration {
  -title: String
  -duration: int
  -passingScore: int
  -negativeMarking: boolean
  -questionShuffle: boolean
  -autoSubmit: boolean
  -calculatorAllowed: boolean
  --
  -ExamConfiguration()
  +getTitle(): String
  +getDuration(): int
  +getPassingScore(): int
  +isNegativeMarking(): boolean
  +isQuestionShuffle(): boolean
  +isAutoSubmit(): boolean
  +isCalculatorAllowed(): boolean
}

class Builder {
  -config: ExamConfiguration = new ExamConfiguration()
  --
  +setTitle(title: String): Builder
  +setDuration(durationMinutes: int): Builder
  +setPassingScore(passingScore: int): Builder
  +enableNegativeMarking(): Builder
  +enableQuestionShuffle(): Builder
  +enableAutoSubmit(): Builder
  +allowCalculator(): Builder
  +build(): ExamConfiguration
}

abstract class AbstractExam {
  #config: ExamConfiguration
  #questionFactories: List<QuestionFactory>
  --
  +AbstractExam(config: ExamConfiguration, questionFactories: List<QuestionFactory>)
  +takeExam(): void
  #printQuestions(): void
}

interface Exam {
  ~displayDashboard(): void
  ~takeExam(): void
}

abstract class ExamFactory {
  +createExam(config: ExamConfiguration, questionFactories: List<QuestionFactory>): Exam
}

class FinalExam {
  +FinalExam(config: ExamConfiguration, questionFactories: List<QuestionFactory>)
  +displayDashboard(): void
}

class FinalExamFactory {
  +createExam(config: ExamConfiguration, questionFactories: List<QuestionFactory>): Exam
}

class MidtermExam {
  +MidtermExam(config: ExamConfiguration, questionFactories: List<QuestionFactory>)
  +displayDashboard(): void
}

class MidtermExamFactory {
  +createExam(config: ExamConfiguration, questionFactories: List<QuestionFactory>): Exam
}

class PracticeQuiz {
  +PracticeQuiz(config: ExamConfiguration, questionFactories: List<QuestionFactory>)
  +displayDashboard(): void
}

class PracticeQuizFactory {
  +createExam(config: ExamConfiguration, questionFactories: List<QuestionFactory>): Exam
}

class Main {
  +{static} main(args: String[]): void
}

class BankQuestionSource {
  -questionBank: Map<String, List<String>>
  -random: Random
  --
  +BankQuestionSource()
  +getQuestionData(type: String): String
}

class FakerQuestionSource {
  -counter: int = 1
  --
  +getQuestionData(type: String): String
}

interface QuestionSource {
  ~getQuestionData(type: String): String
}

EssayEvaluator ..|> QuestionEvaluator
EssayEvaluator ..> Question
EssayFactory ..|> QuestionFactory
EssayFactory *-- QuestionSource
EssayFactory ..> Question
EssayFactory ..> QuestionRenderer
EssayFactory ..> QuestionEvaluator
EssayQuestion ..|> Question
EssayRenderer ..|> QuestionRenderer
EssayRenderer ..> Question
MCQEvaluator ..|> QuestionEvaluator
MCQEvaluator ..> Question
MCQFactory ..|> QuestionFactory
MCQFactory *-- QuestionSource
MCQFactory ..> Question
MCQFactory ..> QuestionRenderer
MCQFactory ..> QuestionEvaluator
MCQQuestion ..|> Question
MCQRenderer ..|> QuestionRenderer
MCQRenderer ..> Question
ProgrammingEvaluator ..|> QuestionEvaluator
ProgrammingEvaluator ..> Question
ProgrammingFactory ..|> QuestionFactory
ProgrammingFactory *-- QuestionSource
ProgrammingFactory ..> Question
ProgrammingFactory ..> QuestionRenderer
ProgrammingFactory ..> QuestionEvaluator
ProgrammingQuestion ..|> Question
ProgrammingRenderer ..|> QuestionRenderer
ProgrammingRenderer ..> Question
QuestionEvaluator ..> Question
QuestionFactory ..> Question
QuestionFactory ..> QuestionRenderer
QuestionFactory ..> QuestionEvaluator
QuestionRenderer ..> Question
TrueFalseEvaluator ..|> QuestionEvaluator
TrueFalseEvaluator ..> Question
TrueFalseFactory ..|> QuestionFactory
TrueFalseFactory *-- QuestionSource
TrueFalseFactory ..> Question
TrueFalseFactory ..> QuestionRenderer
TrueFalseFactory ..> QuestionEvaluator
TrueFalseQuestion ..|> Question
TrueFalseRenderer ..|> QuestionRenderer
TrueFalseRenderer ..> Question
Builder *-- ExamConfiguration
Builder ..> Builder
AbstractExam ..|> Exam
AbstractExam --> ExamConfiguration
AbstractExam o-- QuestionFactory
ExamFactory ..> ExamConfiguration
ExamFactory ..> Exam
FinalExam --|> AbstractExam
FinalExam ..> ExamConfiguration
FinalExamFactory --|> ExamFactory
FinalExamFactory ..> ExamConfiguration
FinalExamFactory ..> Exam
MidtermExam --|> AbstractExam
MidtermExam ..> ExamConfiguration
MidtermExamFactory --|> ExamFactory
MidtermExamFactory ..> ExamConfiguration
MidtermExamFactory ..> Exam
PracticeQuiz --|> AbstractExam
PracticeQuiz ..> ExamConfiguration
PracticeQuizFactory --|> ExamFactory
PracticeQuizFactory ..> ExamConfiguration
PracticeQuizFactory ..> Exam
BankQuestionSource ..|> QuestionSource
FakerQuestionSource ..|> QuestionSource
@enduml